--- a/index.html
+++ b/index.html
@@ -1,159 +1,70 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Christopher's Personal Site</title>
+    <title>Christopher Poynter</title>
     <link rel="stylesheet" href="css/styles.css">
-
-  <!-- Internal CSS
-  <style>
-    body
-    {
-      background-color: powderblue;
-    }
-    hr {
-      border-style: dotted none none;
-      width: 5%;
-      border-color: #8fc0a9;
-      border-width: 5px;
-    }
-  </style>
-  -->
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Parisienne&display=swap" rel="stylesheet">
   </head>
+  <body>
 
-  <!-- inline css
-  <body style="background-color: white">
-  -->
-  <body >
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/Chris.jpg" alt="Christopher Profile Picture" height="200" width="200"></td>
-        <td><h1>Christopher Poynter</h1>
-        <p>
-          <em>Web Developer</em>
-        </p>
-        <p>
-          I am a graduate of Shawnee State University, with a degree in Digital
-          Simulation and Game Engineering Technology. This degree gave me plenty of
-          knowledge in computer science, however I have just recently started learning
-          web development so that I can bolster my skills and apply them within the
-          realms of the web.
-        </p></td>
-      </tr>
-    </table>
 
-    <hr>
-    <!--working with lists -->
-    <h3>Education</h3>
-      <ul>
-        <li>Shawnee State University</li>
-        <ul>
-          <li>Digital Simulation and Game Engineering Technology</li>
-        </ul>
-      </ul>
-    <!-- Working with Tables -->
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="20">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2013-2019</td>
-          <td>Delivery Driver at Giovanni's Pizza</td>
-        </tr>
-        <tr>
-          <td>2019-Current</td>
-          <td>Intercon Ramp Operations at DHL Express</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Chris.</h1>
+      <h2 class="subtitle">a <span class="pro">pro</span>grammer.</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain=img">
+    </div>
 
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="5">
-      <thead>
-        <tr>
-          <th>Professional</th>
-          <th></th>
-          <th>Hobby</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>HTML5</td>
-          <td>⭐⭐</td>
-          <td>Singing</td>
-          <td>⭐⭐</td>
-        </tr>
-        <tr>
-          <td>C++</td>
-          <td>⭐⭐⭐</td>
-          <td>Guitar</td>
-          <td>⭐⭐</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>⭐</td>
-          <td>Gaming</td>
-          <td>⭐⭐⭐</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="middle-container">
 
-    <!--table within a table
-    <table>
-      <tr>
-        <td>
-          <table>
-            <tr>
-              <td>HTML5</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>C++</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-            <tr>
-              <td>CSS</td>
-              <td>⭐</td>
-            </tr>
-          </table>
-        </td>
-        <td>
-          <table>
-            <tr>
-              <td>Singing</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Guitar</td>
-              <td>⭐⭐</td>
-            </tr>
-            <tr>
-              <td>Gaming</td>
-              <td>⭐⭐⭐</td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-  -->
+      <div class="profile">
+        <img class="profile-pic"src="images/profile.jpg" alt="fox-img">
+        <h2>Hello.</h2>
+        <p class="intro">I am a Web Designer. I love gaming and have a great little family!</p>
+      </div>
+      <hr>
 
-    <!-- Working with links-->
-    <h3><a href="hobbies.html">My Hobbies</a></h3>
-    <h4>
-      <a href="contact-me.html">Contact Me</a>
-    </h4>
-    <!--
-    Inputs Notebook for personal reference
-    <h4>
-      <a href="inputs.html">Inputs notebook</a>
-    </h4>
-  -->
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-image" src="images/code.png" alt="code-img">
+          <h3>Development & Design</h3>
+          <p>I started coding in 2015 during college in the Game Design Program at Shawnee State University, to get more of an idea on how
+            games are developed. Through the past year now I have been enchancing my design skills by learning more on Web Design and aim
+            to make some cool programs in the future.</p>
+        </div>
+
+        <div class="skill-row">
+          <img class="controller-image" src="images/game-controller.png" alt="controller-img">
+          <h3>Gaming</h3>
+          <p>The hobby that got me interested in coding. Always a fun passtime especially with some friends. I especially love
+             playing some RPGs</p>
+        </div>
+
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Need more info? Or maybe some gaming talk?</h3>
+        <p class="contact-message">Then let's talk! I will be glad to discuss anything gaming related or talk about my experiences so far in programming. </p>
+
+        <a class="contact-button" href="mailto:Poynterc2014@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.facebook.com/chris.poynter.9">Facebook</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/christopher-poynter-6a47a0189/">LinkedIn</a>
+      <a class="footer-link" href="https://regiore.github.io/CV/">Website</a>
+      <p class="copyright">© 2020 Christopher Poynter.</p>
+
+    <!--<h6>Game Controller Icon made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></h6>
+    <h6>Code Icon made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></h6>
+    -->
+    </div>
   </body>
 </html>
